Configure single project deployment for both frontend apps

--- a/vercel.json
+++ b/vercel.json
@@ -20,12 +20,24 @@
   ],
   "routes": [
     {
+      "src": "/$",
+      "dest": "Frontend/user/index.html"
+    },
+    {
+      "src": "/admin/?",
+      "dest": "Frontend/admin/index.html"
+    },
+    {
       "src": "/user/(.*)",
       "dest": "Frontend/user/$1"
     },
     {
       "src": "/admin/(.*)",
       "dest": "Frontend/admin/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "Frontend/user/$1"
     }
   ]
 }
